get specific cool faces (⌐■_■)

--- a/lib/faces.yml
+++ b/lib/faces.yml
@@ -163,3 +163,16 @@ faces:
   - •̀.̫•́✧
   - (ᵒ̤̑ ₀̑ ᵒ̤̑)
   - \_(ʘ_ʘ)_/\"
+labels:
+  ok: ٩(•̤̀ᵕ•̤́๑)ᵒᵏᵎᵎᵎᵎ
+  yeah: (۶ꈨຶꎁꈨຶ )۶ʸᵉᵃʰᵎ
+  shrug: ¯\_(ツ)_/¯
+  swim: ヘ（。□°）ヘ
+  wat: (ಠ_ಠ)
+  wtf: \_(ʘ_ʘ)_/
+  hai: (•◡•)/
+  bro: (☞ﾟ∀ﾟ)☞
+  cool: (⌐■_■)
+  love: ♥‿♥
+  rage: (╯°□°）╯
+  cry: (ಥ﹏ಥ)
